// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableComponent renders without exception when moves provided 1`] = `
<View
  style={
    [
      {
        "alignSelf": "center",
        "justifyContent": "center",
        "maxWidth": 920,
        "minHeight": 500,
        "padding": 16,
        "position": "relative",
        "width": "100%",
      },
      null,
    ]
  }
>
  <View
    style={
      {
        "alignSelf": "center",
        "backgroundColor": "#0E4638",
        "borderColor": "#D49B23",
        "borderRadius": 240,
        "borderWidth": 5,
        "elevation": 4,
        "height": "58%",
        "maxWidth": 560,
        "minHeight": 230,
        "minWidth": 240,
        "padding": 12,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 14,
        "width": "68%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#176B55",
          "borderColor": "rgba(255,255,255,0.28)",
          "borderRadius": 220,
          "borderWidth": 1,
          "flex": 1,
          "justifyContent": "center",
          "padding": 12,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFF7E3",
            "fontSize": 13,
            "fontWeight": "900",
            "textTransform": "uppercase",
          }
        }
      >
        Current trick
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 4,
            "justifyContent": "center",
            "marginTop": 8,
            "minHeight": 92,
          }
        }
      >
        <View
          accessibilityLabel="Play card 3 ori"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#9E7A3A",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "elevation": 2,
                  "height": 101,
                  "justifyContent": "center",
                  "margin": 4,
                  "overflow": "hidden",
                  "shadowColor": "#000000",
                  "shadowOffset": {
                    "height": 3,
                    "width": 0,
                  },
                  "shadowOpacity": 0.18,
                  "shadowRadius": 5,
                  "width": 54,
                },
                {
                  "height": 84,
                  "margin": 2,
                  "width": 45,
                },
              ]
            }
          >
            <Image
              resizeMode="contain"
              source={
                {
                  "testUri": "../../../src/assets/cards/card_3_2.jpeg",
                }
              }
              style={
                {
                  "borderRadius": 4,
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          accessibilityLabel="Play card 8 ori"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#9E7A3A",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "elevation": 2,
                  "height": 101,
                  "justifyContent": "center",
                  "margin": 4,
                  "overflow": "hidden",
                  "shadowColor": "#000000",
                  "shadowOffset": {
                    "height": 3,
                    "width": 0,
                  },
                  "shadowOpacity": 0.18,
                  "shadowRadius": 5,
                  "width": 54,
                },
                {
                  "height": 84,
                  "margin": 2,
                  "width": 45,
                },
              ]
            }
          >
            <Image
              resizeMode="contain"
              source={
                {
                  "testUri": "../../../src/assets/cards/card_3_7.jpeg",
                }
              }
              style={
                {
                  "borderRadius": 4,
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFF7E3",
          "borderColor": "#9E7A3A",
          "borderRadius": 8,
          "borderWidth": 1,
          "elevation": 2,
          "justifyContent": "space-between",
          "minHeight": 82,
          "padding": 8,
          "position": "absolute",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.08,
          "shadowRadius": 8,
        },
        null,
        [
          {
            "bottom": "4%",
            "left": "50%",
            "marginLeft": -62,
            "right": undefined,
            "top": undefined,
            "width": 124,
          },
        ],
        {
          "borderColor": "#225D9C",
          "borderWidth": 2,
        },
        null,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#225D9C",
            "fontSize": 16,
            "fontWeight": "900",
          }
        }
      >
        ♠
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#17120D",
            "flex": 1,
            "fontSize": 13,
            "fontWeight": "900",
          }
        }
      >
        Alice
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ♥ 
        4
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ● 
        1
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        1
         
        cards
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFF7E3",
          "borderColor": "#9E7A3A",
          "borderRadius": 8,
          "borderWidth": 1,
          "elevation": 2,
          "justifyContent": "space-between",
          "minHeight": 82,
          "padding": 8,
          "position": "absolute",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.08,
          "shadowRadius": 8,
        },
        null,
        [
          {
            "bottom": undefined,
            "left": "4%",
            "marginLeft": undefined,
            "right": undefined,
            "top": "43%",
            "width": 124,
          },
        ],
        null,
        null,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#225D9C",
            "fontSize": 16,
            "fontWeight": "900",
          }
        }
      >
        ♣
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#17120D",
            "flex": 1,
            "fontSize": 13,
            "fontWeight": "900",
          }
        }
      >
        Bruno
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ♥ 
        4
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ● 
        0
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        1
         
        cards
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFF7E3",
          "borderColor": "#9E7A3A",
          "borderRadius": 8,
          "borderWidth": 1,
          "elevation": 2,
          "justifyContent": "space-between",
          "minHeight": 82,
          "padding": 8,
          "position": "absolute",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.08,
          "shadowRadius": 8,
        },
        null,
        [
          {
            "bottom": undefined,
            "left": "50%",
            "marginLeft": -62,
            "right": undefined,
            "top": "4%",
            "width": 124,
          },
        ],
        null,
        null,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#225D9C",
            "fontSize": 16,
            "fontWeight": "900",
          }
        }
      >
        ♦
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#17120D",
            "flex": 1,
            "fontSize": 13,
            "fontWeight": "900",
          }
        }
      >
        Clara
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ♥ 
        4
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ● 
        3
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        1
         
        cards
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFF7E3",
          "borderColor": "#9E7A3A",
          "borderRadius": 8,
          "borderWidth": 1,
          "elevation": 2,
          "justifyContent": "space-between",
          "minHeight": 82,
          "padding": 8,
          "position": "absolute",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.08,
          "shadowRadius": 8,
        },
        null,
        [
          {
            "bottom": undefined,
            "left": undefined,
            "marginLeft": undefined,
            "right": "4%",
            "top": "43%",
            "width": 124,
          },
        ],
        null,
        null,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#225D9C",
            "fontSize": 16,
            "fontWeight": "900",
          }
        }
      >
        ♣
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#17120D",
            "flex": 1,
            "fontSize": 13,
            "fontWeight": "900",
          }
        }
      >
        Dino
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ♥ 
        4
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ● 
        0
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        1
         
        cards
      </Text>
    </View>
  </View>
</View>
`;

exports[`TableComponent renders without exception when no move 1`] = `
<View
  style={
    [
      {
        "alignSelf": "center",
        "justifyContent": "center",
        "maxWidth": 920,
        "minHeight": 500,
        "padding": 16,
        "position": "relative",
        "width": "100%",
      },
      null,
    ]
  }
>
  <View
    style={
      {
        "alignSelf": "center",
        "backgroundColor": "#0E4638",
        "borderColor": "#D49B23",
        "borderRadius": 240,
        "borderWidth": 5,
        "elevation": 4,
        "height": "58%",
        "maxWidth": 560,
        "minHeight": 230,
        "minWidth": 240,
        "padding": 12,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 14,
        "width": "68%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#176B55",
          "borderColor": "rgba(255,255,255,0.28)",
          "borderRadius": 220,
          "borderWidth": 1,
          "flex": 1,
          "justifyContent": "center",
          "padding": 12,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFF7E3",
            "fontSize": 13,
            "fontWeight": "900",
            "textTransform": "uppercase",
          }
        }
      >
        Current trick
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 4,
            "justifyContent": "center",
            "marginTop": 8,
            "minHeight": 92,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFF7E3",
              "fontSize": 16,
              "fontWeight": "700",
              "opacity": 0.85,
              "textAlign": "center",
            }
          }
        >
          Waiting for the lead card
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFF7E3",
          "borderColor": "#9E7A3A",
          "borderRadius": 8,
          "borderWidth": 1,
          "elevation": 2,
          "justifyContent": "space-between",
          "minHeight": 82,
          "padding": 8,
          "position": "absolute",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.08,
          "shadowRadius": 8,
        },
        null,
        [
          {
            "bottom": "4%",
            "left": "50%",
            "marginLeft": -62,
            "right": undefined,
            "top": undefined,
            "width": 124,
          },
        ],
        {
          "borderColor": "#225D9C",
          "borderWidth": 2,
        },
        null,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#225D9C",
            "fontSize": 16,
            "fontWeight": "900",
          }
        }
      >
        ♠
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#17120D",
            "flex": 1,
            "fontSize": 13,
            "fontWeight": "900",
          }
        }
      >
        Alice
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ♥ 
        4
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ● 
        1
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        1
         
        cards
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFF7E3",
          "borderColor": "#9E7A3A",
          "borderRadius": 8,
          "borderWidth": 1,
          "elevation": 2,
          "justifyContent": "space-between",
          "minHeight": 82,
          "padding": 8,
          "position": "absolute",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.08,
          "shadowRadius": 8,
        },
        null,
        [
          {
            "bottom": undefined,
            "left": "4%",
            "marginLeft": undefined,
            "right": undefined,
            "top": "43%",
            "width": 124,
          },
        ],
        null,
        null,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#225D9C",
            "fontSize": 16,
            "fontWeight": "900",
          }
        }
      >
        ♣
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#17120D",
            "flex": 1,
            "fontSize": 13,
            "fontWeight": "900",
          }
        }
      >
        Bruno
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ♥ 
        4
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ● 
        0
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        1
         
        cards
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFF7E3",
          "borderColor": "#9E7A3A",
          "borderRadius": 8,
          "borderWidth": 1,
          "elevation": 2,
          "justifyContent": "space-between",
          "minHeight": 82,
          "padding": 8,
          "position": "absolute",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.08,
          "shadowRadius": 8,
        },
        null,
        [
          {
            "bottom": undefined,
            "left": "50%",
            "marginLeft": -62,
            "right": undefined,
            "top": "4%",
            "width": 124,
          },
        ],
        null,
        null,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#225D9C",
            "fontSize": 16,
            "fontWeight": "900",
          }
        }
      >
        ♦
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#17120D",
            "flex": 1,
            "fontSize": 13,
            "fontWeight": "900",
          }
        }
      >
        Clara
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ♥ 
        4
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ● 
        3
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        1
         
        cards
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#FFF7E3",
          "borderColor": "#9E7A3A",
          "borderRadius": 8,
          "borderWidth": 1,
          "elevation": 2,
          "justifyContent": "space-between",
          "minHeight": 82,
          "padding": 8,
          "position": "absolute",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.08,
          "shadowRadius": 8,
        },
        null,
        [
          {
            "bottom": undefined,
            "left": undefined,
            "marginLeft": undefined,
            "right": "4%",
            "top": "43%",
            "width": 124,
          },
        ],
        null,
        null,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#225D9C",
            "fontSize": 16,
            "fontWeight": "900",
          }
        }
      >
        ♣
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#17120D",
            "flex": 1,
            "fontSize": 13,
            "fontWeight": "900",
          }
        }
      >
        Dino
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ♥ 
        4
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        ● 
        0
      </Text>
      <Text
        style={
          {
            "color": "#5F5546",
            "fontSize": 11,
            "fontWeight": "800",
          }
        }
      >
        1
         
        cards
      </Text>
    </View>
  </View>
</View>
`;
